# yolo11_ros

./: Dockerfile  README.md  compose.yaml  entrypoint.sh
docker/: Dockerfile  compose.yaml
src/yolo11_ros/: CMakeLists.txt  package.xml
src/yolo11_ros/launch/: yolo11_usb.launch
src/yolo11_ros/scripts/: semantic_filter_node.py  yolo11_node.py
